--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Environment files
+.env
+.env.local
+.env.*.local
+firebase-service-account.json
+
+# Build output
+build
+coverage
